[package]
name = "granular-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
dashmap = { version = "6.1.0", default-features = false }
once_cell = "1.21.3"
log = "0.4.27"
actix-web = { version = "4.10.2", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
num_cpus = { version = "1.16.0", optional = true }

[features]
default = []
http = ["actix-web", "serde", "serde_json", "num_cpus"]

[dev-dependencies]
better-logger = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }